src/components/login/login.css
@import '../app/variables';

:root {
  --gradient: linear-gradient(45deg, rgba(0, 74, 255, 1) 0%, rgba(147, 244, 254, 1) 100%);
  --transition: all ease 300ms;
  --header-focused-font-size: 32px;
  --rect-width: 200px;
}

.wrapper {
  overflow: visible !important;
  display: block !important;
  clear: both;
  padding-right: 16px;
}

.wrapper,
.login {
  height: 100%;
}

.login,
.signUp {
  transition: var(--transition);
  padding: 0 40px;
  position: relative;
  box-sizing: border-box;
  float: left;
}

.login {
  width: 42%;

  & .table {
    position: relative;
  }

  & h2 {
    color: var(--color-black);
  }

  & form button {
    display: none;
    transition: var(--transition);
    animation: fadeIn 300ms forwards;
  }

  & header {
    position: absolute;
    left: 0;
    top: 0;
    margin-top: 50px;

    & .backButton {
      color: var(--color-primary-standard);
      text-decoration: initial;
      font-family: var(--content-font);
      font-size: 16px;
      font-weight: normal;

      & .icon {
        vertical-align: text-bottom;
        font-size: 1.4em;
      }
    }
  }

  /* @todo remove these with #3 */

  & .outTaken {
    top: 100px;

    & + .outTaken {
      top: 150px;

      & + .outTaken {
        top: 200px;
      }
    }
  }

  &.focused {
    transform: translateZ(0);
    width: 75%;

    & form button {
      display: inline-block;
    }

    & h2 {
      font-size: var(--header-focused-font-size);
      margin-top: 4em;
    }
  }
}

.signUp {
  height: calc(100% + 46px);
  width: 58%;
  margin-top: -23px;
  border-radius: 3px;
  overflow: hidden;

  & .bg,
  & .shapes,
  & .shapes > div {
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
  }

  & .bg {
    z-index: 0;
    opacity: 0.94;
    background: var(--gradient);
    border-radius: 3px;
  }

  & .shapes {
    z-index: 1;
  }

  & .shape {
    position: absolute !important;

    &.rectA {
      right: 20% !important;
      top: 20% !important;
      left: auto !important;
      width: var(--rect-width);

      & img {
        animation: wave 20s 0.1s infinite linear; /* stylelint-disable-line */
      }
    }

    &.rectB {
      left: 10% !important;
      bottom: 25% !important;
      top: auto !important;
      width: var(--rect-width);

      & img {
        animation: wave 16s 0.1s infinite linear; /* stylelint-disable-line */
      }
    }

    &.rectC {
      right: 20% !important;
      bottom: 20% !important;
      top: auto !important;
      left: auto !important;
      z-index: 2;
      width: var(--rect-width);

      & img {
        animation: wave 12s 0.1s infinite linear; /* stylelint-disable-line */
      }
    }

    &.circle {
      right: 10% !important;
      bottom: 7% !important;
      left: auto !important;
      top: auto !important;
      width: 150px;

      & img {
        animation: wander 16s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955); /* stylelint-disable-line */
      }
    }

    &.triangle {
      right: 10% !important;
      left: auto !important;
      top: 10% !important;
      width: 250px;

      & img {
        animation: somersault 20s 0.1s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955); /* stylelint-disable-line */
      }
    }
  }

  & .table {
    position: relative;
    z-index: 2;
  }

  & h2 {
    color: var(--color-white);
  }

  & h5,
  & a,
  & .singUpArrow {
    color: var(--color-white);
    vertical-align: middle;
    transition: var(--transition);
  }

  & .singUpArrow {
    font-size: 1.2em;
  }

  & h5 {
    max-width: 320px;
  }

  & a {
    text-decoration: none;
  }

  & .shapes {
    position: absolute;
    z-index: 1;
  }

  &.focused {
    width: 25%;
    transform: translateZ(0);

    & h2 {
      font-size: var(--header-focused-font-size);
    }

    & h5 {
      font-size: 1em;
    }
  }
}

.table {
  display: table;
  width: 100%;
  height: 100%;

  & .tableCell {
    display: table-cell;
    vertical-align: middle;
  }
}

.outTaken {
  position: absolute;
}

@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes somersault {
  0% {
    transform: translate3d(15%, 0, 0) rotateZ(10deg);
  }

  100% {
    transform: translate3d(-15%, 0, 0) rotateZ(-10deg);
  }
}

@keyframes tilt {
  0% {
    transform: rotateX(-30deg);
  }

  25% {
    transform: rotateX(30deg);
  }

  50% {
    transform: rotateY(-30deg);
  }

  75% {
    transform: rotateY(30deg);
  }

  100% {
    transform: rotateZ(20deg);
  }
}

@-webkit-keyframes wave {
  0% {
    transform: rotateZ(0deg) translate3d(0, 10%, 0) rotateZ(0deg);
  }

  100% {
    transform: rotateZ(360deg) translate3d(0, 10%, 0) rotateZ(-360deg);
  }
}

@-webkit-keyframes wander {
  0% {
    transform: translate3d(0, 0, 0) rotateZ(0deg);
  }

  100% {
    transform: translate3d(-15%, 10%, 0) rotateZ(0deg);
  }
}

@media (--medium-viewport) {
  .login {
    height: calc(100vh - var(--m-top-bar-height) - var(--m-menu-bar-height)); /* stylelint-disable-line */
  }

  .signUp {
    margin-top: 0;
    margin-right: -33px;
    border-radius: 0px;
    width: 60%;
    height: calc(100vh - var(--m-top-bar-height) - var(--m-menu-bar-height)); /* stylelint-disable-line */
  }

  .login,
  .signUp {
    & .focused {
      & h2 {
        font-size: var(--font-size-h3-m);
      }
    }
  }
}

@media (--small-viewport) {
  .wrapper {
    padding-right: 0;
  }

  .login,
  .signUp {
    padding: 0 20px;

    & h2 {
      font-size: var(--font-size-h2-s);
    }
  }

  .table {
    display: block;
    position: relative;

    & .tableCell {
      display: block;
      vertical-align: initial;
    }
  }

  .login {
    height: calc(50vh - var(--s-top-bar-height)); /* stylelint-disable-line */
    width: 100%;

    & header {
      position: relative;
      left: -5px;
      font-size: 14px;
    }

    &.focused {
      width: 100%;
      height: auto;

      & h2 {
        margin-top: 20px;
        margin-bottom: 10px;
      }

      & form button {
        display: block;
        width: 100%;
        max-width: 100%;
      }
    }

    & .outTaken {
      right: 0;
      top: 0;

      & + .outTaken {
        top: 50px;
      }

      & > .outTaken {
        top: 50px;
      }
    }
  }

  .signUp {
    margin-right: 0;
    border-radius: 0px;
    width: 100vw; /* stylelint-disable-line */
    height: calc(50vh - var(--s-menu-bar-height)); /* stylelint-disable-line */

    & h2 {
      margin-top: 40px;
    }

    &.focused {
      width: 100vw; /* stylelint-disable-line */
    }

    & .shape {
      position: absolute !important;

      &.rectA {
        right: 10% !important;
        top: 10% !important;
        width: calc(0.5 * var(--rect-width));
      }

      &.rectB {
        right: 8% !important;
        top: 15% !important;
        left: auto !important;
        width: calc(0.5 * var(--rect-width));
      }

      &.rectC {
        display: none;
        width: 0;
      }

      &.circle {
        right: auto !important;
        left: 10% !important;
        bottom: 7% !important;
        width: calc(0.75 * var(--rect-width));
      }

      &.triangle {
        right: -5% !important;
        top: 3% !important;
        width: calc(0.75 * var(--rect-width));
      }
    }
  }
}

